feat: add `--enable-preview` and `--add-modules=jdk.incubator.concurrent` for Java 19